# rp2040-web-serial-bridge

./: .gitignore  CMakeLists.txt
include/: tusb_config.h
src/: main.c  usb_descriptors.c
www/: app.js  index.html  style.css
